Fix squashed header images on talks page

--- a/sass/layouts/_talks.scss
+++ b/sass/layouts/_talks.scss
@@ -1,5 +1,5 @@
 .single-talk {
-    img {
+    #content img {
         padding-top: 2rem;
         padding-bottom: 2rem;
         border-radius: $box-border-radius;
